--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Ubuntu&display=swap" rel="stylesheet">
+
+<meta name="google-adsense-account" content="ca-pub-3078730047162065">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3078730047162065"
+     crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="styles/style.css">
     <title>Age Calculator</title>
